<?xml version="1.0"?>
<package format="2">
  <name>cem</name>
  <version>0.0.0</version>
  <description>cen</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gym</depend>

</package>
